# foldermind

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
demo-data/ml-course/: lecture-1.md  project-design.md  reading-note.txt
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppSidebar.tsx
src/features/import/: ImportPanel.tsx
src/features/notes/: NotesWorkspace.tsx
src/features/settings/: SettingsPanel.tsx
src/lib/: ai-service.ts  backend.ts  constants.ts  file-utils.ts  mock-ai.ts  ocr.ts  pdf.ts  report-files.ts  runtime-polyfills.ts  storage.ts  types.ts
src/styles/: app.css
