[package]
name = "foldermind"
version = "0.1.10"
description = "Local-first AI folder organization and note desktop app"
authors = ["Codex"]
edition = "2021"

[lib]
name = "foldermind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
pdf-extract = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
walkdir = "2"
